# sentinel-fwlogs

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile.am  README.adoc  bootstrap  configure.ac  fwlog.h  fwrecorder.c  lint.am  log.h  m4.am  parser.h  protocols  sender.h  sentinel_fwlogs.c
.gitlab-ci/: Dockerfile  release.sh
fwlogs/: Makefile.am  config.c  config.h  czmq_log.c  fwlog.c  fwlog.h  log.c  parser.c  parser.h  protocol2str.c.m4  sender.c  sender.h  sentinel_fwlogs.c
recorder/: Makefile.am  fwrecorder.c
tests/: Makefile.am  parse_ipv4.c  parse_ipv6.c  parser.c  sender.c  unittests.c
